# nxr

./: .editorconfig  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/nxr-affected/: Cargo.toml
crates/nxr-affected/src/: analyze.rs  git.rs  graph.rs  lib.rs  paths.rs
crates/nxr-cli/: Cargo.toml
crates/nxr-cli/src/: cli.rs  error_format.rs  flake.rs  main.rs  nix_flags.rs  output.rs  output_options.rs  output_task.rs  runner_output.rs  shell_mode.rs
crates/nxr-cli/src/commands/: affected.rs  cache.rs  common.rs  complete.rs  completion.rs  doctor.rs  explain.rs  graph.rs  inspect.rs  list.rs  manpage.rs  mod.rs  nix_op.rs  plan.rs  run.rs  select.rs  task.rs  views.rs  watch.rs
crates/nxr-cli/tests/: cli.rs
crates/nxr-cli/tests/common/: mod.rs
crates/nxr-completion/: Cargo.toml
crates/nxr-completion/src/: cache.rs  dynamic.rs  fingerprint.rs  generate.rs  lib.rs  shell.rs
crates/nxr-core/: Cargo.toml
crates/nxr-core/src/: config.rs  diagnostics.rs  ecosystem.rs  env_policy.rs  lib.rs  model.rs  plan.rs  projects.rs  repo_path.rs  sanitize.rs
crates/nxr-nix/: Cargo.toml
crates/nxr-nix/src/: adapter.rs  capabilities.rs  command.rs  discovery.rs  lib.rs  resolve.rs  suggest.rs  tasks.rs
crates/nxr-process/: Cargo.toml
crates/nxr-process/src/: foreground.rs  lib.rs  session.rs  signals.rs  supervisor.rs
crates/nxr-task/: Cargo.toml
crates/nxr-task/src/: duration.rs  events.rs  graph.rs  lib.rs  plan_exec.rs  planner.rs  resolve.rs  run_events.rs  scheduler.rs  schema.rs
crates/nxr-watch/: Cargo.toml
crates/nxr-watch/src/: filter.rs  lib.rs  restart.rs  watcher.rs
crates/nxr-workspace/: Cargo.toml
crates/nxr-workspace/src/: discovery.rs  lib.rs  paths.rs
docs/: ADAPTERS.md  APP_AUTHORING.md  ARCHITECTURE.md  CLI_CONTRACT.md  CLI_REFERENCE.md  COMPATIBILITY.md  CONTRACT_SUMMARY.md  CONTRIBUTING.md  DESIGN.md  DEV_ENV_INTEGRATION.md  ECOSYSTEM_SYNTHESIS.md  EXECUTION_CONTEXT.md  FEATURES.md  INDEX.md  MANIFEST.json  MIGRATE_FROM_MISE_JUST.md  MONOREPO_VIEWS.md  PERFORMANCE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY_REVIEW_V1.md  TASKS.md  TECH_STACK_AND_REPO_SHAPE.md  TELEMETRY.md
docs/adr/: README.md  template.md
docs/demo/: README.md  nxr.tape  record.sh
docs/ideas/: FUTURE_CONTROL_PLANE.md
examples/mk-app/: flake.nix
fixtures/: README.md
fixtures/affected-deps/: flake.nix
fixtures/affected-deps/crates/api/: README.md
fixtures/affected-deps/crates/web/: README.md
fixtures/affected-deps/shared/: lib.txt
fixtures/app-metadata/: flake.nix
fixtures/basic-apps/: flake.nix
fixtures/broken-flake/: flake.nix
fixtures/diamond-dedupe/: flake.nix
fixtures/ecosystem-graph-cargo/: README.md  cargo-workspace-graph.json
fixtures/named-dev-shells/: flake.nix
fixtures/namespaced-monorepo/: flake.nix  nxr.projects.json
fixtures/nested-directory/: flake.nix
fixtures/nested-directory/deep/down/here/: README.md
fixtures/parallel-group/: flake.nix
fixtures/shell-integration/: flake.nix
fixtures/standard-outputs/: flake.nix
fixtures/task-dag/: flake.nix
fixtures/task-timeout/: flake.nix
fixtures/task-working-directory/: ROOT_MARKER  flake.nix
fixtures/task-working-directory/deep/down/here/: README.md
nix/checks/: quality.nix
nix/lib/: default.nix  metadata.nix  mk-app.nix  mk-package-app.nix  workspace-src.nix
nix/modules/: apps.nix  discovery.nix  flake-parts.nix  shell-integration.nix  tasks.nix
nix/overlays/: default.nix
schemas/: affected-v1.schema.json  affected-v2.schema.json  ecosystem-graph-v0.schema.json  events-v1.schema.json  execution-plan-v1.schema.json  list-v1.schema.json  plan-v1.schema.json  projects-v1.schema.json  task-v1.schema.json
shell/: direnv-zsh-hook.zsh  integrate.bash  integrate.fish  integrate.zsh  nxr.bash  nxr.fish  nxr.zsh
templates/default/: README.md  flake.nix
tests/fixtures/: basic-apps-flake-show.json  events-v1-samples.json  explain-basic-apps-hello.json  task-dag-nxr-metadata.json
xtask/: Cargo.toml
xtask/src/: main.rs
