[workspace]
resolver = "2"
members = [
  "crates/nxr-cli",
  "crates/nxr-core",
  "crates/nxr-nix",
  "crates/nxr-process",
  "crates/nxr-workspace",
  "crates/nxr-completion",
  "crates/nxr-task",
  "crates/nxr-watch",
  "xtask",
]
default-members = ["crates/nxr-cli"]

[workspace.package]
version = "2.2.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
publish = false

[workspace.dependencies]
base64 = "0.22"
camino = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
dialoguer = { version = "0.12", default-features = false, features = ["fuzzy-select"] }
nix = { version = "0.31", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
tempfile = "3"
thiserror = "2"
which = "7"
directories = "6"
fs2 = "0.4"
notify = "6.1"
globset = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
