[package]
name = "nxr-affected"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Conservative path-based affected analysis for nxr apps and tasks"

[dependencies]
camino = { workspace = true }
globset = { workspace = true }
nxr-core = { path = "../nxr-core" }
nxr-task = { path = "../nxr-task" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
