[package]
name = "nxr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "nxr command-line interface"

[[bin]]
name = "nxr"
path = "src/main.rs"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
