[package]
name = "nxr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "nxr command-line interface"

[[bin]]
name = "nxr"
path = "src/main.rs"

[dependencies]
camino = { workspace = true }
clap = { workspace = true }
clap_mangen = { workspace = true }
dialoguer = { workspace = true }
nxr-affected = { path = "../nxr-affected" }
nxr-core = { path = "../nxr-core" }
nxr-completion = { path = "../nxr-completion" }
nxr-nix = { path = "../nxr-nix" }
nxr-task = { path = "../nxr-task" }
nxr-process = { path = "../nxr-process" }
nxr-watch = { path = "../nxr-watch" }
nxr-workspace = { path = "../nxr-workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
