[package]
name = "nxr-completion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Shell completion generation and discovery cache for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
