[package]
name = "nxr-completion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Shell completion generation and discovery cache for nxr"

[dependencies]
camino = { workspace = true }
directories = { workspace = true }
fs2 = { workspace = true }
nxr-core = { path = "../nxr-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
