[package]
name = "nxr-nix"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Nix CLI adapter for nxr"

[dependencies]
camino = { workspace = true }
nxr-core = { path = "../nxr-core" }
nxr-task = { path = "../nxr-task" }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
