[package]
name = "nxr-process"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Process supervision and signal handling for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
