[package]
name = "nxr-process"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Process supervision and signal handling for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }
signal-hook = { workspace = true }

[lints]
workspace = true
