[package]
name = "nxr-task"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "V2 task schema, graph, planning, and scheduling for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
