[package]
name = "nxr-task"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Task schema, graph, planning, and scheduling for nxr"

[dependencies]
base64 = { workspace = true }
nxr-core = { path = "../nxr-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
