[package]
name = "nxr-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "V2 filesystem watch and restart orchestration for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
