[package]
name = "nxr-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Filesystem watch and restart orchestration for nxr"

[dependencies]
camino = { workspace = true }
globset = { workspace = true }
notify = { workspace = true }
nxr-core = { path = "../nxr-core" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
