[package]
name = "nxr-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Flake root discovery and repository context for nxr"

[dependencies]
nxr-core = { path = "../nxr-core" }

[lints]
workspace = true
